Fix z-index

--- a/vscode.css
+++ b/vscode.css
@@ -303,6 +303,7 @@ button, input {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 11;
 }
 #header h1 {
     line-height: normal;
